Fix `.checkable` vertical height and alignment

--- a/src/renderer/src/styles/components/_checkable.sass
+++ b/src/renderer/src/styles/components/_checkable.sass
@@ -4,6 +4,8 @@
  * ========================================================
  */
 
+// 1. Fix vertical whitespace caused by inline-* display.
+
 .checkable
   $block: &
   $e-reference: #{&}__reference
@@ -12,6 +14,7 @@
   &__control
     display: inline-flex
     align-items: center
+    vertical-align: top // [1]
 
   @at-root #{$e-reference}
     width: 1px
@@ -26,6 +29,7 @@
     background: var(--color-label-background)
     width: 11px
     height: 11px
+    flex-shrink: 0
     display: flex
     justify-content: center
     align-items: center
@@ -50,7 +54,6 @@
       linejoin: round
     width: 7px
     height: 7px
-    position: absolute // HACK: avoid `.checkable` vertical offset when using `inline-flex`.
 
     #{$e-reference}:not(:checked) + #{$e-mask} &
       display: none
